@@ -11,8 +11,11 @@ uwsgi (1.0-1) UNRELEASED; urgency=low
   * Update debian/copyright file.
   * python-uwsgidecorators:
     - fix binary-install rule to call dh_python2
+  * Add LSB Description field to debian/uwsgi.init.d.
+  * Set Architecture to "all" for binary package uwsgi-extra because
+    it contains no architecture dependent files.
 
- -- Janos Guljas <janos@resenje.org>  Mon, 02 Jan 2012 03:06:05 +0100
+ -- Janos Guljas <janos@resenje.org>  Mon, 02 Jan 2012 03:20:31 +0100
 
 uwsgi (0.9.8.3-2) unstable; urgency=low
 
